--- a/.github/workflows/HelmReleaseTest.yml
+++ b/.github/workflows/HelmReleaseTest.yml
@@ -12,6 +12,9 @@ jobs:
       matrix:
         repos: ["microfrontend"]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Helm linting
         id: linting
         working-directory: charts
