--- a/.github/workflows/HelmReleaseTest.yml
+++ b/.github/workflows/HelmReleaseTest.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  apply-sem-ver:
+  scan-version-bump:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -35,7 +35,7 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    # needs: apply-sem-ver
+    needs: scan-version-bump
     steps:
       - name: Checkout
         uses: actions/checkout@v2
