--- a/.github/workflows/test_loop.yml
+++ b/.github/workflows/test_loop.yml
@@ -6,25 +6,14 @@ on:
 jobs:
   get-charts:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        repos: ["microfrontend"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get-Charts
-        id: chartlist
-        working-directory: charts
-        run: ls -d
-
-  scan-version-bump:
-    runs-on: ubuntu-latest
-    needs: get-charts
-    strategy:
-      matrix:
-        repos: ${{ steps.chartlist.outputs }}
-    steps:
       - name: Helm linting
         working-directory: charts
-        run: echo ${{ matrix.repos }}
+        run: |
+          for d in */ ; do
+              echo "Running on directory $d"
+              helm lint $d -f $d/values.yaml.Example 
+          done
