--- a/charts/microauthservice/templates/service.yaml
+++ b/charts/microauthservice/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ include ".helm.fullname" . }}-sql"
+  name: {{ include ".helm.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.postgres.type }}
+  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.postgres.containerPort }}
-      targetPort: {{ .Values.postgres.containerPort }}
+    - port: {{ .Values.image.containerPort }}
+      targetPort: {{ .Values.image.containerPort }}
       protocol: TCP
       name: http
   selector:
