fix: support for PV and EFS. Values files cannot be used as is

--- a/charts/baseline/Chart.yaml
+++ b/charts/baseline/Chart.yaml
@@ -37,3 +37,6 @@ dependencies:
 - name: aws-efs-csi-driver
   version: "2.2.8"
   repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
+# - name: elastic/filebeat
+#   version: "7.12.1"
+#   repository: https://helm.elastic.co
