--- a/charts/baseline/values.yaml.Example
+++ b/charts/baseline/values.yaml.Example
@@ -53,38 +53,6 @@ auth-services:
         value: "postgres://postgres:postgrespassword@baseline-postgresql:5432/postgres"
       - name: NODE_ENV
         value: "development"
-  postgresql:
-    namespace: "hanwha"
-    postgres:
-      env:
-        - name: POSTGRES_PASSWORD
-          value: postgrespassword
-    storage:
-      claimSize: 5Gi
-      className: efs-storageclass
-  hasura:
-    namespace: "hanwha"
-    hasura:
-      domainPath: "hasura"
-      env:
-        - name: HASURA_GRAPHQL_METADATA_DATABASE_URL
-          value: postgres://postgres:postgrespassword@baseline-postgresql:5432/postgres
-          ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
-        - name: PG_DATABASE_URL
-          value: postgres://postgres:postgrespassword@baseline-postgresql:5432/postgres
-          ## enable the console served by server
-        - name: HASURA_GRAPHQL_ENABLE_CONSOLE
-          value: "true" # set to "false" to disable console
-          ## enable debugging mode. It is recommended to disable this in production
-        - name: HASURA_GRAPHQL_DEV_MODE
-          value: "true"
-        - name: HASURA_GRAPHQL_ENABLED_LOG_TYPES
-          value: startup, http-log, webhook-log, websocket-log, query-log
-          # We have a readonly role for all users other than Hasura GraphQL admin
-        - name: HASURA_GRAPHQL_UNAUTHORIZED_ROLE
-          value: readonly
-        - name: HASURA_GRAPHQL_ADMIN_SECRET
-          value: HasuraPassword
   sidecarimage:
     name: "logging-sidecar"
     repository: ghcr.io/htaic/platform-logging-service
@@ -107,3 +75,38 @@ auth-services:
     minReplicas: 1
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
+
+# file://./dependency_chart/postgres
+postgresql:
+  namespace: "hanwha"
+  postgres:
+    env:
+      - name: POSTGRES_PASSWORD
+        value: postgrespassword
+  storage:
+    claimSize: 5Gi
+    className: efs-storageclass
+# file://./dependency_chart/hasura
+hasura:
+  namespace: "hanwha"
+  hasura:
+    domainPath: "hasura"
+    env:
+      - name: HASURA_GRAPHQL_METADATA_DATABASE_URL
+        value: postgres://postgres:postgrespassword@baseline-postgresql:5432/postgres
+        ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
+      - name: PG_DATABASE_URL
+        value: postgres://postgres:postgrespassword@baseline-postgresql:5432/postgres
+        ## enable the console served by server
+      - name: HASURA_GRAPHQL_ENABLE_CONSOLE
+        value: "true" # set to "false" to disable console
+        ## enable debugging mode. It is recommended to disable this in production
+      - name: HASURA_GRAPHQL_DEV_MODE
+        value: "true"
+      - name: HASURA_GRAPHQL_ENABLED_LOG_TYPES
+        value: startup, http-log, webhook-log, websocket-log, query-log
+        # We have a readonly role for all users other than Hasura GraphQL admin
+      - name: HASURA_GRAPHQL_UNAUTHORIZED_ROLE
+        value: readonly
+      - name: HASURA_GRAPHQL_ADMIN_SECRET
+        value: HasuraPassword
