--- a/charts/baseline/Chart.yaml
+++ b/charts/baseline/Chart.yaml
@@ -37,9 +37,9 @@ dependencies:
 - name: aws-efs-csi-driver
   version: "2.2.8"
   repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
-# - name: filebeat
-#   version: "7.12.1"
-#   repository: https://helm.elastic.co
+- name: filebeat
+  version: "7.12.1"
+  repository: https://helm.elastic.co
 - name: auth-services
   version: "0.0.3"
   repository: "file://./dependency_chart/microauthservice"
@@ -49,3 +49,6 @@ dependencies:
 - name: hasura
   version: "0.0.1"
   repository: "file://./dependency_chart/hasura"
+- name: oathkeeper
+  version: "0.25.6"
+  repository: "https://k8s.ory.sh/helm/charts"
