fix: update postgres for default sql values

--- a/charts/baseline/dependency_chart/postgresql/templates/configmap.yaml
+++ b/charts/baseline/dependency_chart/postgresql/templates/configmap.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configmap
 data:
-  configdata.sql" |-
-{{ .Files.Get "configdata.sql" | indent 4 }}
+  configdata.sql: |
+{{ .Files.Get "./dependency_chart/postgresql/configdata.sql" | indent 4 }}
