--- a/charts/auth-service/Chart.yaml
+++ b/charts/auth-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: auth-services
+name: auth-service
 description: A Helm chart for Kubernetes micro auth services
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.4
+version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -25,5 +25,16 @@ appVersion: "0.0.1"
 
 # kubeVersion: ">=1.17.0-0"
 
-# You can find these charts on the artifact hub
-# https://artifacthub.io/packages/helm/bitnami/postgresql
+dependencies:
+- name: postgresql
+  version: "0.0.2"
+  repository: "file://./dependency_chart/postgresql"
+- name: oathkeeper
+  version: "0.25.6"
+  repository: "https://k8s.ory.sh/helm/charts"
+- name: kratos
+  version: "0.25.6"
+  repository: "https://k8s.ory.sh/helm/charts"
+- name: keto
+  version: "0.25.6"
+  repository: "https://k8s.ory.sh/helm/charts"
