--- a/charts/auth-service/dependency_chart/postgresql/Chart.yaml
+++ b/charts/auth-service/dependency_chart/postgresql/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: baseline
-description: A Helm chart for Kubernetes
+name: postgresql
+description: A dependent Helm chart for Kubernetes micro auth services
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,31 +15,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.0.2
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.0.1"
-
-# kubeVersion: ">=1.17.0-0"
-
-# This is where the helm chart will automatically pull content from a remote helm chart. Overrides
-# can also be done for this so ensure naming overlap doesn't conflict or break your local or the remote
-# helm chart dependency.
-# https://helm.sh/docs/helm/helm_dependency/
-# https://github.com/traefik/traefik-helm-chart
-dependencies:
-- name: hasura
-  version: "0.0.2"
-  repository: "file://./dependency_chart/hasura"
-- name: auth-service
-  version: "0.1.0"
-  repository: "https://htaic.github.io/helm-charts"
-- name: traefik
-  version: "10.24.2"
-  repository: https://helm.traefik.io/traefik
-- name: aws-efs-csi-driver
-  version: "2.2.8"
-  repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
