test: refactor charts
test: refactor charts

--- a/charts/faux-auth-service/dependency_chart/postgresql/values.yaml
+++ b/charts/faux-auth-service/dependency_chart/postgresql/values.yaml
@@ -27,10 +27,10 @@ resources:
     memory: 750Mi
 
 serviceAccount:
-  create: true
+  create: false
   annotations: {}
   name: ""
-
+  
 autoscaling:
   enabled: false
   minReplicas: 1
