--- a/charts/baseline-ory/Chart.yaml
+++ b/charts/baseline-ory/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: baselineORY
+name: baseline-ory
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
