--- a/charts/baseline-ory/Chart.yaml
+++ b/charts/baseline-ory/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: baseline
+name: baseline-ory
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.3
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -42,6 +42,6 @@ dependencies:
   version: "0.0.4"
   repository: "https://htaic.github.io/helm-charts"
 # the auth service back end
-- name: faux-auth-service
-  version: "0.0.1"
+- name: auth-service
+  version: "0.1.0"
   repository: "https://htaic.github.io/helm-charts"
