test: tweaks to hasura charts

--- a/charts/faux-auth-service/dependency_chart/hasura/templates/deployment.yaml
+++ b/charts/faux-auth-service/dependency_chart/hasura/templates/deployment.yaml
@@ -50,6 +50,13 @@ spec:
           #     port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+          - name: config
+            mountPath: /hasura-metadata
+      volumes:
+        - name: config
+          configMap:
+            name: {{ .Release.Name }}-configmap          
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
