fix: remove duplicate name in configmaps

--- a/charts/faux-auth-service/dependency_chart/hasura/templates/configmap.yaml
+++ b/charts/faux-auth-service/dependency_chart/hasura/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: {{ .Release.Name }}-hasura-configmap
 data:
   k8s_hasura_metadata.json: |
 {{ .Values.hasuraMetadata | indent 4 }}
